// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VergunningDetail /> <EvenementMelding /> should match the full page snapshot 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Vergunningen"
          class="ChapterIcon"
          fill="black"
        >
          vergunningen.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/vergunningen"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Vergunningen
        </a>
        <h2
          class="Heading Heading__large"
        >
          Evenement melding
        </h2>
      </div>
    </header>
    <div
      class="PageContent DetailPageContent"
    >
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Kenmerk
        </h3>
        <p
          class="Value"
        >
          Z/000/000003
        </p>
      </div>
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Soort vergunning
        </h3>
        <p
          class="Value"
        >
          Evenement melding
        </p>
      </div>
      <div
        class="InfoDetail LocationInfo"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Locatie
        </h3>
        <p
          class="Value"
        >
          Amstel 1 1011PN Amsterdam 
          <button
            class="Button Button__inline Button__lean MapLink"
          >
            Bekijk op de kaart
          </button>
        </p>
      </div>
      <div
        class="InfoDetailGroup EvenementMelding_DateAndTime"
      >
        <div
          class="InfoDetailGroupContent"
        >
          <div
            class="InfoDetail"
          >
            <h3
              class="Heading Heading__tiny Label"
            >
              Op
            </h3>
            <p
              class="Value"
            >
              13 oktober 2021
            </p>
          </div>
          <div
            class="InfoDetail"
          >
            <h3
              class="Heading Heading__tiny Label"
            >
              Van
            </h3>
            <p
              class="Value"
            >
              08:00 uur
            </p>
          </div>
          <div
            class="InfoDetail"
          >
            <h3
              class="Heading Heading__tiny Label"
            >
              Tot
            </h3>
            <p
              class="Value"
            >
              11:00 uur
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StatusLine VergunningStatus"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Status
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--start-checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Ontvangen
              </strong>
              <time
                class="StatusDate"
              >
                17 oktober 2021
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--middle-checked-next"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                In behandeling
              </strong>
              <time
                class="StatusDate"
              >
                17 oktober 2021
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--end"
              />
              <span
                class="Checkmark"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Afgehandeld
              </strong>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;

exports[`<VergunningDetail /> <Flyeren /> should match the full page snapshot 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Vergunningen"
          class="ChapterIcon"
          fill="black"
        >
          vergunningen.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/vergunningen"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Vergunningen
        </a>
        <h2
          class="Heading Heading__large"
        >
          Verspreiden reclamemateriaal (sampling)
        </h2>
      </div>
    </header>
    <div
      class="PageContent DetailPageContent"
    >
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Kenmerk
        </h3>
        <p
          class="Value"
        >
          Z/22/1597501
        </p>
      </div>
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Soort vergunning
        </h3>
        <p
          class="Value"
        >
          Verspreiden reclamemateriaal (sampling)
        </p>
      </div>
      <div
        class="InfoDetail LocationInfo"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Locatie
        </h3>
        <p
          class="Value"
        >
          Gustav Mahlerlaan 10 1082 PP Amsterdam 
          <button
            class="Button Button__inline Button__lean MapLink"
          >
            Bekijk op de kaart
          </button>
        </p>
      </div>
      <div
        class="InfoDetailGroup Flyeren_DateAndTime"
      >
        <div
          class="InfoDetailGroupContent"
        >
          <div
            class="InfoDetail"
          >
            <h3
              class="Heading Heading__tiny Label"
            >
               
            </h3>
            <p
              class="Value"
            >
              Op de dagen van
            </p>
          </div>
          <div
            class="InfoDetail"
          >
            <h3
              class="Heading Heading__tiny Label"
            >
              Van
            </h3>
            <p
              class="Value"
            >
              01 mei 2022
            </p>
          </div>
          <div
            class="InfoDetail"
          >
            <h3
              class="Heading Heading__tiny Label"
            >
              Tot
            </h3>
            <p
              class="Value"
            >
              05 mei 2022
            </p>
          </div>
        </div>
      </div>
      <div
        class="InfoDetailGroup Flyeren_DateAndTime"
      >
        <div
          class="InfoDetailGroupContent"
        >
          <div
            class="InfoDetail"
          >
            <h3
              class="Heading Heading__tiny Label"
            >
               
            </h3>
            <p
              class="Value"
            >
              Tussen de tijdstippen
            </p>
          </div>
          <div
            class="InfoDetail"
          >
            <h3
              class="Heading Heading__tiny Label"
            >
              Van
            </h3>
            <p
              class="Value"
            >
              10:00
            </p>
          </div>
          <div
            class="InfoDetail"
          >
            <h3
              class="Heading Heading__tiny Label"
            >
              Tot
            </h3>
            <p
              class="Value"
            >
              17:00
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StatusLine VergunningStatus"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Status
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--start-checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Ontvangen
              </strong>
              <time
                class="StatusDate"
              >
                13 januari 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                In behandeling
              </strong>
              <time
                class="StatusDate"
              >
                13 januari 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--end-active ConnectLine--end-checked"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Afgehandeld
              </strong>
              <time
                class="StatusDate"
              >
                31 januari 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;

exports[`<VergunningDetail /> <GPP /> should match the full page snapshot 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Vergunningen"
          class="ChapterIcon"
          fill="black"
        >
          vergunningen.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/vergunningen"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Vergunningen
        </a>
        <h2
          class="Heading Heading__large"
        >
          Vaste parkeerplaats voor gehandicapten (GPP)
        </h2>
      </div>
    </header>
    <div
      class="PageContent DetailPageContent"
    >
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Kenmerk
        </h3>
        <p
          class="Value"
        >
          Z/000/000009
        </p>
      </div>
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Soort vergunning
        </h3>
        <p
          class="Value"
        >
          GPP
        </p>
      </div>
      <div
        class="InfoDetail LocationInfo"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Locatie
        </h3>
        <p
          class="Value"
        >
          Amstel 1 1017AB Amsterdam 
          <button
            class="Button Button__inline Button__lean MapLink"
          >
            Bekijk op de kaart
          </button>
        </p>
      </div>
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Kenteken
        </h3>
        <p
          class="Value"
        >
          12-ghz-2
        </p>
      </div>
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Resultaat
        </h3>
        <p
          class="Value"
        >
          Verleend
        </p>
      </div>
    </div>
    <div
      class="StatusLine VergunningStatus"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Status
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--start-checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Ontvangen
              </strong>
              <time
                class="StatusDate"
              >
                07 april 2021
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--middle-checked-next"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                In behandeling
              </strong>
              <time
                class="StatusDate"
              >
                07 april 2021
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--end"
              />
              <span
                class="Checkmark"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Afgehandeld
              </strong>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;
